syntax = "proto3";

package user;

import "posts.proto";


service UserService{
    rpc CreateUser(CreateUserReq) returns (User);
    rpc UpdateUser(User) returns (User);
    rpc GetUserById(WithId) returns(User);
    rpc GetAllUsers(Empty) returns(Users);
    rpc DeleteUserById(WithId) returns(User);
    rpc LoginUser(LoginUserReq) returns(User);
    rpc CheckField(CheckFieldRequest) returns (CheckFieldReponse);
    rpc ChangePassword(ChangePassReq) returns (ChangePassRes);
}

message ChangePassReq{
    string id =1;
    string newPassword=2;
}

message ChangePassRes{
    string id=1;
    string newPassword=2;
}

message LoginUserReq{
    string email = 1;
    string password=2;
}
message CheckFieldRequest{syntax = "proto3";

    package user;
    
    import "posts.proto";
    
    
    service UserService{
        rpc CreateUser(CreateUserReq) returns (User);
        rpc UpdateUser(User) returns (User);
        rpc GetUserById(WithId) returns(User);
        rpc GetAllUsers(Empty) returns(Users);
        rpc DeleteUserById(WithId) returns(User);
        rpc LoginUser(LoginUserReq) returns(User);
        rpc CheckField(CheckFieldRequest) returns (CheckFieldReponse);
    }
    
    message LoginUserReq{
        string email = 1;
        string password=2;
    }
    message CheckFieldRequest{
        string field =1;
        string value =2;
    }
    message CheckFieldReponse{
        bool Check=1;
    }
    
    message User{
        string id =1;
        string first_name=2;
        string last_name=3;
        string username = 4;
        string phone =5;
        string email=6;
        string password=7;
        string address=8;
        string gender = 9;
        string role = 10;
        string code=11;
        string postalcode=12;
        repeated Post Posts=13;
        string created_at=14;
        string updated_at=15;
        string deleted_at=16;
    }
    
    message CreateUserReq{
        string id=1;
        string first_name=2;
        string last_name=3;
        string username=4;
        string phone =5;
        string email =6;
        string password=7;
        string address=8;
        string gender =9;
        string role=10;
        string code=11;
        string postalcode=12;
    
    }
    
    
    message Users{
        repeated User User=1;
    }
    
    
    
    
    
    
    
    
    string field =1;
    string value =2;
}
message CheckFieldReponse{
    bool Check=1;
}

message User{
    string id =1;
    string first_name=2;
    string last_name=3;
    string username = 4;
    string phone =5;
    string email=6;
    string password=7;
    string address=8;
    string gender = 9;
    string role = 10;
    string code=11;
    string postalcode=12;
    repeated Post Posts=13;
    string created_at=14;
    string updated_at=15;
    string deleted_at=16;
}

message CreateUserReq{
    string id=1;
    string first_name=2;
    string last_name=3;
    string username=4;
    string phone =5;
    string email =6;
    string password=7;
    string address=8;
    string gender =9;
    string role=10;
    string code=11;
    string postalcode=12;

}


message Users{
    repeated User User=1;
}







